@@ -441,7 +441,7 @@ dojo.declare("classes.managers.DiplomacyManager", null, {
 		if (ncorns.value >= 1){
 			elders.energy++;
 
-			var markerCap = this.game.religion.getZU("marker").val * 5 + 5;
+			var markerCap = Math.floor(this.game.religion.getZU("marker").getEffectiveValue(this.game) * 5 + 5);
 			if (elders.energy > markerCap){
 				elders.energy = markerCap;
 			}
@@ -960,7 +960,7 @@ dojo.declare("com.nuclearunicorn.game.ui.tab.Diplomacy", com.nuclearunicorn.game
 
 		if (this.leviathansInfo) {
 			var leviathans = this.game.diplomacy.get("leviathans");
-			var markerCap = this.game.religion.getZU("marker").val * 5 + 5;
+			var markerCap = Math.floor(this.game.religion.getZU("marker").getEffectiveValue(this.game) * 5 + 5);
 			var leviathansInfoEnergy = leviathans.energy ? leviathans.energy + " / " + markerCap : "N/A";
 			this.leviathansInfo.innerHTML = "Energy: " + leviathansInfoEnergy +
 				"<br />Time to leave: " + this.game.toDisplayDays(leviathans.duration);
