@@ -343,7 +343,13 @@ dojo.declare("classes.managers.ReligionManager", com.nuclearunicorn.core.TabMana
 		effects: {
 			"corruptionRatio" : 0.000001
 		},
-		unlocked: false
+		calculateEffects: function(self, game) {
+			self.effects["corruptionRatio"] = 0.000001 * (game.challenges.getChallenge("blackSky").researched ? 1.1 : 1);
+		},
+		unlocked: false,
+		getEffectiveValue: function(game) {
+			return this.val * (game.challenges.getChallenge("blackSky").researched ? 1.1 : 1);
+		}
 	},{
 		name: "unicornGraveyard",
 		label: $I("religion.zu.unicornGraveyard.label"),
@@ -396,7 +402,10 @@ dojo.declare("classes.managers.ReligionManager", com.nuclearunicorn.core.TabMana
 			spaceBuilding: ["spaceBeacon"]
 		},
 		unlocked: false,
-		flavor: $I("religion.zu.blackPyramid.flavor")
+		flavor: $I("religion.zu.blackPyramid.flavor"),
+		getEffectiveValue: function(game) {
+			return this.val + (game.challenges.getChallenge("blackSky").researched ? 1 : 0);
+		}
 	}],
 
 	religionUpgrades:[{
@@ -1169,7 +1178,7 @@ dojo.declare("com.nuclearunicorn.game.ui.tab.ReligionTab", com.nuclearunicorn.ga
 						model.visible = this.hasResources(model);
 					},
 					gainMultiplier: function() {
-						return 1 + this.game.getEffect("relicRefineRatio") * this.game.religion.getZU("blackPyramid").val;
+						return 1 + this.game.getEffect("relicRefineRatio") * this.game.religion.getZU("blackPyramid").getEffectiveValue(this.game);
 					},
 					gainedResource: "relic",
 					logTextID: "religion.refineTCsBtn.refine.msg"
