@@ -238,6 +238,10 @@
     "stats.time.current": "Temps de jeu",
     "stats.group.all": "Statistiques de tous les temps",
     "stats.group.current": "Statistiques de la partie actuelle",
+    "challendge.blackSky.desc": "Recommence le jeu sans événements astronomiques.<br><br>Objectif : Construire une balise spatiale.",
+    "challendge.blackSky.effect.desc": "Les Anciens arrivent plus tôt.",
+    "challendge.blackSky.label": "Ciel Obscur",
+    "challendge.blackSky.event": "La nuit est noire, aucune étoile à observer.",
     "challendge.1000Years.desc": "Objectif : Atteindre l'an 1000.",
     "challendge.1000Years.effect.desc": "TBD",
     "challendge.1000Years.label": "An mille",
